# hw_strategygame

./: .gitignore  CMakeLists.txt  build-mingw.sh  build.bat  embedder.py  rebuild-mingw.sh  rebuild.bat  rebuild.sh
Setup/: Setup_script.iss
client/: CMakeLists.txt
client/include/: ClientApplication.hpp  GameLogic.hpp
client/src/: ClientApplication.cpp  GameLogic.cpp  client_main.cpp
cmake_modules/: FindGLEW.cmake  FindNoesis.cmake  FindNoesisApp.cmake  FindRakNet.cmake  FindSDL2_gpu.cmake  Findrpclib.cmake
common/: CMakeLists.txt
common/include/: CommonHelper.hpp  ComponentInstance.hpp  ComponentType.hpp  ComponentTypeRegistry.hpp  EntityInstance.hpp  EntityType.hpp  EntityTypeBuilder.hpp  EntityTypeRegistry.hpp  IComponentInstance.hpp  IComponentType.hpp  MapPosition.hpp  MatchManager.hpp  Position.hpp  QuadTree.hpp  QuadTree.tpp  UniversalException.hpp  UniversalException.tpp  entity_system_registries.hpp  network.hpp
common/include/Components/: AllComponents.hpp  coords.hpp  health.hpp  mana.hpp  movement.hpp  position.hpp  synchronizable.hpp  tasklist.hpp  team.hpp
common/include/Components/Tasks/: ITask.hpp  Task.hpp  move.hpp
common/include/Events/: CDefaultEvent.hpp  CancellableEvent.hpp  EventAccessProxy.hpp  IEvent.hpp  event.hpp
common/include/Network/: Client.hpp  Server.hpp  network.hpp
common/include/Serialization/: IComponentInstanceSerializer.hpp  IEntityInstanceSerializer.hpp  IEntityTypeSerializer.hpp  ProtobufEntityInstanceSerializer.hpp  ProtobufEntityTypeSerializer.hpp
common/include/Tasks/: ITask.hpp  move.hpp
common/proto/: components.proto  entity.proto
common/src/: ComponentTypeRegistry.cpp  EntityInstance.cpp  EntityType.cpp  EntityTypeBuilder.cpp  EntityTypeRegistry.cpp  MatchManager.cpp  UniversalException.cpp  network.cpp
common/src/Components/: coords.cpp  health.cpp  mana.cpp  movement.cpp  position.cpp  team.cpp
common/src/Components/Tasks/: move.cpp
common/src/Events/: CDefaultEvent.cpp  CancellableEvent.cpp  EventAccessProxy.cpp  event.cpp
common/src/Network/: Client.cpp  Server.cpp  network.cpp
common/src/Serialization/: ProtobufEntityInstanceSerializer.cpp  ProtobufEntityTypeSerializer.cpp
common/src/Tasks/: move.cpp
common_graphics/: CMakeLists.txt
common_graphics/include/: Camera.hpp  EntityRenderer.hpp  GlobalRenderer.hpp  GuiRenderer.hpp  RenderHelper.hpp  SDL.hpp  UserInputManager.hpp
common_graphics/include/Components/: renderer.hpp
common_graphics/resources/: main.fsh  main.vsh
common_graphics/resources/markup/: DiagnosticOverlay.xaml
common_graphics/src/: Camera.cpp  EntityRenderer.cpp  GlobalRenderer.cpp  GuiRenderer.cpp  RenderHelper.cpp  UserInputManager.cpp
common_graphics/src/Components/: renderer.cpp
common_tests/: CMakeLists.txt
common_tests/src/: common_tests_main.cpp  component_tests.cpp  entity_system_tests.cpp  event_system_tests.cpp  serialization_tests.cpp  universal_exception_test.cpp
editor/: CMakeLists.txt
editor/include/: EditorApplication.hpp  EditorLauncher.hpp  EditorMainWindow.hpp  EntityTypeEditor.hpp  EntityTypeEditorWindow.hpp  ProtobufEditor.hpp  editor_main.hpp
editor/include/ProtobufEditor/: ProtobufEditor.hpp  tree_data.hpp
editor/resources/markup/: EditorApplication.xaml  EditorMainWindow.xaml  EntityTypeEditor.xaml  EntityTypeEditorWindow.xaml  ProtobufEditor.xaml
editor/src/: EditorApplication.cpp  EditorLauncher.cpp  EditorMainWindow.cpp  EntityTypeEditor.cpp  EntityTypeEditorWindow.cpp  ProtobufEditor.cpp  editor_main.cpp
editor/src/ProtobufEditor/: ProtobufEditor.cpp  tree_data.cpp
